--- a/Activity7.html
+++ b/Activity7.html
@@ -12,7 +12,7 @@
             <article>
                 <h3>Please refer to the table below for complete listing.</h3>
                 <section>
-                    <table border="1" cellspacing="0" cellpudding="100">
+                    <table border="1" cellspacing="0" cellpadding="20px">
                         <thread>
                             <tr>
                                 <th>Number</th>
