--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity1.html">Exercise 1</a></li>
         <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity2.html">Exercise 2</a></li>
         <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity3.html">Exercise 3</a></li>
-        <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity4.html">Exercise 4</A></li>
-        <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity5.html">Exercise 5</A></li>
-        <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity6.html">Exercise 6</A></li>
+        <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity4.html">Exercise 4</a></li>
+        <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity5.html">Exercise 5</a></li>
+        <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity6.html">Exercise 6</a></li>
+        <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity6.html">Exercise 7</a></li>
           </ol>
     </p>
     </body>
