--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity5.html">Exercise 5</a></li>
         <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity6.html">Exercise 6</a></li>
         <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity6.html">Exercise 7</a></li>
+        <li><a href="https://github.com/RafazHon/Activities/blob/main/Activity9.html">Exercise 9</a></li>
           </ol>
     </p>
     </body>
